--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -42,6 +41,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0",
+    "react-hot-toast": "^2.4.1",
     "sass": "^1.68.0"
   }
 }
